<resources>
    <string name="app_name">Mega Calculator Free Version</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Equals">=</string>
    <string name="Plas">+</string>
    <string name="Pos">Поспехов В.О.</string>
</resources>